// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Modals ModalHandler 1`] = `
<div
  style={
    Object {
      "height": "200px",
    }
  }
>
  <div
    id="modal-root"
  />
  <button
    onClick={[Function]}
  >
    Open Modal
  </button>
</div>
`;

exports[`Storyshots components|Modals ModalHeader 1`] = `
<div
  style={
    Object {
      "height": "200px",
    }
  }
>
  <div
    id="modal-root"
  />
</div>
`;
